--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,23 @@ html, body{
         color: var(--color-white);
     }
 
+.section-title{
+    padding: 3rem 0;
+    color: var(--color-theme-dark);
+    text-align: center;
+}
+    .section-title h1{
+        font-family: var(--font-play);
+        font-size: var(--font-size-36);
+        font-weight: var(--font-weight-bold);
+    }
+        .section-title h1 span{
+            color: var(--color-theme);
+        }
+    .section-title p{
+        margin: 1rem;
+    }
+
 
 /* top-menu */
 .top-menu{
@@ -288,6 +305,64 @@ html, body{
             color: var(--color-white);
         }
 
+/* shop by category */
+.shop-by-category{
+
+}
+    .shop-by-category .grid{
+        display: grid;
+        gap: 0.8rem;
+        grid-template-columns: repeat(5, minmax(100px, 249px));
+        grid-template-rows: repeat(3, minmax(100px, 249px));
+    }
+    .shop-by-category .category-box{
+        background-color: var(--color-grey-1);
+        border-radius: var(--border-radius-small);
+        height: 100%;
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+    }
+        .shop-by-category .category-box .category-box-title{
+            width: 50%;
+            border-radius: 0 var(--border-radius-small) 0 0;
+            background-color: var(--color-theme-dark);
+            color: var(--color-theme);
+            padding: 0.5rem 1rem;
+            font-weight: var(--font-weight-medium);
+            position: absolute;
+            left: 0;
+            bottom: 0;
+        }
+
+    #category-box-1 {
+       grid-column: 1 / 2;
+       grid-row: 1 / 2; 
+    }
+    #category-box-2{
+        grid-column: 2 / 4;
+        grid-row: 1 / 2;
+    }
+    #category-box-3{
+        grid-column: 4 / -1;
+        grid-row: 1 / 3;
+    }
+    #category-box-4{
+        grid-column: 1 / 3;
+        grid-row: 2 / -1;
+    }
+    #category-box-5{
+        grid-column: 3 / 4;
+        grid-row: 2 / 3;
+    }
+    #category-box-6{
+        grid-column: 3 / 5;
+        grid-row: 3 / -1;
+    }
+    #category-box-7{
+        grid-column: 5 / -1;
+        grid-row: 3 / -1;
+    }
 
 
 @media (min-width:578px){
@@ -307,11 +382,8 @@ html, body{
     }
 }
 @media (min-width: 992px){
-    .top-menu > .container{
-       justify-content: space-between;
-    }
     .top-menu .menu-links .links{
-        display: block;
+        display: inline;
     }
 
 
