--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,30 @@ html, body{
         background-color: var(--color-theme-dark);
         color: var(--color-white);
     }
+.btn-dark{
+    background-color: var(--color-theme-dark);
+    color: var(--color-white);
+    border-radius: var(--border-radius-medium);
+    font-weight: var(--font-weight-medium);
+    padding-right: 1.75rem;
+    padding-left: 1.75rem;
+}
+        .btn-dark:hover{
+            background-color: var(--color-white);
+            color: var(--color-theme);
+        }
+.bg-theme{
+    background-color: var(--color-theme);
+}
+.text-theme{
+    color: var(--color-theme);
+}
+.instock{
+    color: var(--color-instock);
+}
+.outofstock{
+    color: var(--color-outofstock);
+}
 
 .section-title{
     padding: 3rem 0;
@@ -198,7 +222,19 @@ html, body{
         .main-menu .menu-links .menu-link i{
             font-size: var(--font-size-16);
         }
-    
+        .main-menu .menu-links #cart{
+            position: relative;
+        }
+            .main-menu .menu-links #cart .badge{
+                background-color: var(--color-theme);
+                position: absolute;
+                top: -1.2rem;
+                left: 0.7rem;
+            }  
+                .main-menu .menu-links:hover #cart .badge{
+                    background-color: var(--color-theme-dark);
+                }
+
     .main-menu nav{
         border-top: solid var(--color-grey-4);
         border-bottom: solid var(--color-grey-4);
@@ -221,6 +257,7 @@ html, body{
                 justify-content: space-between;
                 align-items: center;
                 padding: 0.7rem 1rem;
+                transition: 0.15s ease-in-out;
             }   
                 .main-menu nav .browse-categories button:hover{
                     background-color: var(--color-theme-dark);
@@ -285,6 +322,7 @@ html, body{
         margin: 0 1rem;
         flex: 1;
         border-radius: var(--border-radius-small);
+        transition: 0.3s ease-in-out;
     }
         .webshop-info .info-box:hover{
             background-color: var(--color-theme);
@@ -292,6 +330,8 @@ html, body{
         }
         .webshop-info .info-box img{
             margin-right: 1.5rem;
+            filter: brightness(100%);
+            transition: 0.3s ease-in-out;
         }
             .webshop-info .info-box:hover img{
                 filter: brightness(1000%);
@@ -300,6 +340,7 @@ html, body{
             color: var(--color-theme);
             font-family: var(--font-roboto);
             font-size: 1rem;
+            transition: 0.3s ease-in-out;
         }
         .webshop-info .info-box:hover h1{
             color: var(--color-white);
@@ -322,16 +363,27 @@ html, body{
         position: relative;
     }
         .shop-by-category .category-box .category-box-title{
+            position: absolute;
+            left: 0;
+            bottom: 0;
             width: 50%;
             border-radius: 0 var(--border-radius-small) 0 0;
             background-color: var(--color-theme-dark);
             color: var(--color-theme);
             padding: 0.5rem 1rem;
             font-weight: var(--font-weight-medium);
-            position: absolute;
-            left: 0;
-            bottom: 0;
+            height: 38px;
+            transition: 0.2s ease-in-out;
         }
+            .shop-by-category .category-box:hover .category-box-title{
+                height: 75px;
+            }
+                .shop-by-category .category-box .category-box-title span{
+                    display: block;
+                    color: var(--color-white);
+                    font-size: 0.8rem;
+                    margin-top: 0.5rem;
+                }
 
     #category-box-1 {
        grid-column: 1 / 2;
@@ -362,6 +414,162 @@ html, body{
         grid-row: 3 / -1;
     }
 
+.new-arrivals{
+    padding-top: 5rem;
+}
+    .new-arrivals .card{
+        position: relative;
+        height: 380px;
+        overflow: hidden;
+    }
+    .new-arrivals .card img{
+        height: 400px;
+    }
+    .new-arrivals .card .card-body{
+        position: absolute;
+        bottom: 0;
+        height: 14%;
+        width: 100%;
+        padding: 1rem;
+        color: var(--color-white);
+        z-index: 1;
+        transition: 0.3s ease-in-out;
+        font-size: 1rem;
+    }
+    
+        .new-arrivals .card:hover .card-body{
+            height: 40%;
+        }
+        .new-arrivals .card .card-body h1{
+            font-size: 1.125rem;
+            margin-bottom: 1rem;
+            font-weight: var(--font-weight-regular);
+        }
+        .new-arrivals .card:hover .card-body h1{
+            margin-bottom: 0;
+            transition: 0.3s ease-in-out;
+        }
+        .new-arrivals .card .card-body button{
+            background-color: transparent;
+            color: var(--color-white);
+            border: 1px solid var(--color-white);
+            font-size: 0.875rem;
+            padding-left: 0.9rem;
+            padding-right: 0.9rem;
+            margin: 0.5rem 0;
+        }
+
+        .new-arrivals .card .card-body .card-old-price{
+            text-decoration: line-through;
+            margin: 0;
+        }
+        .new-arrivals .card .card-body .card-discount-price{
+            color: var(--color-theme);
+            font-weight: var(--font-weight-medium);
+            font-size: 1.5em;
+            margin: 0;
+        }
+
+    .new-arrivals .card .card-background{
+        position: absolute;
+        bottom: 0;
+        height: 15%;
+        width: 100%;
+        background-color: var(--color-theme-dark);
+        opacity: 0.90;
+        transition: height 0.3s ease-in-out;
+    }
+        .new-arrivals .card:hover .card-background{
+            height: 100%;
+        }
+    
+    .new-arrivals .card .card-menu{
+        position: absolute;
+        z-index: 1;
+        top: 120%;
+        right: 1rem;
+        list-style: none;
+        padding: 0.8rem;
+        font-size: 1.25rem;
+        border-radius: var(--border-radius-medium);
+        background-color: var(--color-white);
+        transition: top 0.3s ease-in-out;
+    }
+        .new-arrivals .card:hover .card-menu{
+            top: 20px;
+        }
+
+            .new-arrivals .card .card-menu li{
+                margin-top: 0.3rem;
+                margin-bottom: 0.3rem;
+                font-size: 1.0em;
+            }
+
+                .new-arrivals .card .card-menu li a{
+                    color: var(--color-grey-1);
+                }
+                    .new-arrivals .card .card-menu li a:hover{
+                        color: var(--color-theme);
+                    }   
+
+/* For new costomers */
+
+.new-costomer{
+    background-color: var(--color-grey-3);
+}
+    .new-costomer .container{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 5rem ;
+    }
+
+    .new-costomer .container .card1{
+        position: relative;
+        width: 90%;
+        margin: auto;
+        padding-right: 1rem;
+        padding: 0;
+    }
+        .new-costomer .container .card1-menu h1{
+            position: absolute;
+            color: var(--color-white);
+            top: 35%;
+            width: 90%;
+            text-align: center;
+            font-size: 5rem;
+        }
+            .new-costomer .container .card1 h1 span{
+                font-size: 3rem;           
+            }
+        .new-costomer .container .card1 p{
+            position: absolute;
+            color: var(--color-white);
+            top: 58%;
+            width: 90%;
+            text-align: center;          
+        }
+        .new-costomer .container .card1 a{
+            position: absolute;
+            display: inline;
+            top: 68%;
+            width: 49%;
+            margin-left: 4.2rem;
+        }
+    .new-costomer .container .discount-text{
+        position: absolute;
+    }
+    .new-costomer .discount-body{
+        padding-left: 30rem;
+    }
+        .new-costomer .discount-body p{
+            margin: 2rem 0;
+        }
+
+    .new-costomer img{
+        height: 418px;
+        width: 300px;
+    }
 
 @media (min-width:578px){
     .top-menu .menu-links{
