--- a/css/style.css
+++ b/css/style.css
@@ -644,11 +644,6 @@ html, body{
                 color: var(--color-theme-dark);
             }
 
-
-
-
-
-
     .flash-sale .flash-sale-body{
         height: 100%;
         width: 30rem;  
@@ -656,6 +651,70 @@ html, body{
     .flash-sale .flash-sale-body p{
         color: var(--color-white);
     }
+
+/* Top seller */
+
+    .top-sellers .container{
+        text-align: center;
+    }
+    .top-sellers .grid{
+        display: inline-grid;
+        gap: 0.8rem;
+        grid-template-columns: repeat(2, minmax(100px, 550px));
+        grid-template-rows: repeat(2, minmax(100px, 345px));
+    }
+
+        .top-sellers .card img{
+            height: 649px;
+        }
+        .top-sellers .new-arrivals .card .card-body{
+            text-align: left;
+            height: 8%;
+        }
+            .top-sellers .new-arrivals .card:hover .card-body{
+                height: 22%;
+            }
+        .top-sellers .new-arrivals .card .card-background{
+            height: 9%;
+            width: 100%;
+        }
+            .top-sellers .new-arrivals .card:hover .card-background{
+                height: 100%;
+            }
+        /* kort nummer 2 och 3 */
+        .top-sellers .navel .card img{
+            height: 550px;
+        }
+        .top-sellers .new-arrivals .grid > .navel .card .card-body{
+            text-align: left;
+            height: 13%;
+        }
+            .top-sellers .new-arrivals .grid > .navel .card:hover .card-body{
+                height: 45%;
+            }
+        .top-sellers  .new-arrivals .grid > .navel .card .card-background{
+            height: 13%;
+            width: 100%;
+        }
+            .top-sellers .new-arrivals .grid > .navel .card:hover .card-background{
+                height: 100%;
+            }
+
+    #topseller-card-lg{
+        grid-column: 1 / 1;
+        grid-row: 1 / 3; 
+    }
+    #topseller-card2{
+        grid-column: 2 / 2;
+        grid-row: 1/1;
+    }
+    #topseller-card3{
+        grid-column: 2 / 2;
+        grid-row: 2 / 2;
+    }
+    
+
+
 
 @media (min-width:578px){
     .top-menu .menu-links{
