--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,14 @@
     --color-theme: #20D3C2;
     --color-theme-light: #EDFCFA;
     --color-theme-dark: #0E153D;
+    --color-theme-dark-light:#50546E;
     --color-dark: #080C24;
     --color-white: #FFFFFF;
     --color-grey-1: #AAAAAA;
     --color-grey-2: #CCCCCC;
     --color-grey-3: #E3E3E3;
     --color-grey-4: #EEEEEE;
+    --color-grey-5:#777777;
     --color-lightgrey: #F6F6F6;
     --color-outofstock: #FE6C6C;
     --color-instock: #82D8C6;
@@ -87,6 +89,10 @@ html, body{
     color: var(--color-outofstock);
 }
 
+.required{
+    color: var(--color-theme);
+}
+
 .section-title{
     padding: 3rem 0;
     color: var(--color-theme-dark);
@@ -103,7 +109,61 @@ html, body{
     .section-title p{
         margin: 1rem;
     }
+a {
+    color: var(--color-theme);
+    text-decoration: none;
+    font-weight: var(--font-weight-regular);
+}
+a:hover {
+    color: var(--color-theme-dark);
+    text-decoration: underline;
+}
 
+.form-theme .card{
+    padding: 1.5rem;
+    border: none;
+    border-radius: var(--border-radius-small);
+    background-color: var(--color-grey-4);
+}
+
+    .form-theme .card .card-body h1{
+        font-family: var(--font-roboto);
+        font-weight: var(--font-weight-medium);
+        color: var(--color-theme-dark);
+        font-size: 1.5rem;
+    }
+    .form-theme .card .card-body .card-text{
+        margin: 1.5 0;
+        line-height: 2;
+    }
+        .form-theme .card .card-body .card-text{
+            font-weight: var(--font-weight-medium);
+        }
+
+        .form-theme .card .card-body .card-text.text-small {
+            color: var(--color-grey-5);
+            font-size: 0.875rem;
+        }
+
+        .form-theme form input[type=checkbox]{
+            height: 15px;
+            width: 15px;
+            display: inline-block;
+        }
+        .form-theme form input[type=text],
+        .form-theme form input[type=email],
+        .form-theme form input[type=password]{
+            display: block;
+            width: 100%;
+            border: none;
+            border-radius: var(--border-radius-small);
+            padding: 0.5rem 1rem;
+            margin: 0.3rem 0;
+        }
+            .form-theme form input:focus{
+                outline: 0;
+                box-shadow: 0 0 2px 0 var(--color-theme-dark);
+            }
 
 /* top-menu */
 .top-menu{
@@ -198,6 +258,38 @@ html, body{
     .main-menu .search{
         flex: 4;
     }
+        .main-menu .search #searchboxForm{
+            position: relative;
+            border-radius: var(--font-weight-medium);
+            height: 45px;
+            margin: auto;   
+        }
+            .main-menu .search #searchboxForm input{
+                position: absolute;
+                border-radius: var(--border-radius-medium);
+                height: 100%;
+                width: 90%;
+                outline: none;
+                border: 1px solid var(--color-grey-2);
+                font-size: 1rem;
+                padding-left: 1.3rem;
+            }
+            .main-menu .search #searchboxForm button{
+                position: absolute;
+                top: 0;
+                right: 45px;
+                width: 50px;
+                height: 100%;
+                background-color: var(--color-theme);
+                color: var(--color-white);
+                border: none;
+                border-radius: 0 var(--border-radius-medium) var(--border-radius-medium) 0 ;
+                transition: 0.3 ease-in-out;
+            }
+            .main-menu .search #searchboxForm button:hover{
+                background-color: var(--color-theme-dark);
+            }
+
     .main-menu .links{
         flex: 3;
         display: flex;
@@ -619,28 +711,28 @@ html, body{
             display: flex;
             justify-content: space-around;
         }
-        .flash-sale .flash-sale-timer .timer{
+        .flash-sale .flash-sale-timer .time-left{
             position: relative;
             height: 109px;
         }
-        .flash-sale .flash-sale-timer .timer img{
+        .flash-sale .flash-sale-timer .time-left img{
             height: 109px;
             width: 109px;
         }
-        .flash-sale .flash-sale-timer .timer .day{
+        .flash-sale .flash-sale-timer .time-left .timer{
             position: absolute;
             bottom: 0;
             height: 80%;
             width: 100%;
             text-align: center;
         }
-            .flash-sale .flash-sale-timer .timer .day h1{
+            .flash-sale .flash-sale-timer .time-left .timer h1{
                 color: var(--color-theme);
                 font-size: 2.3rem;
                 font-weight: var(--font-weight-bold);
                 margin-bottom: 0;
             }
-            .flash-sale .flash-sale-timer .timer .day p{
+            .flash-sale .flash-sale-timer .time-left .timer p{
                 color: var(--color-theme-dark);
             }
 
@@ -660,7 +752,7 @@ html, body{
     .top-sellers .grid{
         display: inline-grid;
         gap: 0.8rem;
-        grid-template-columns: repeat(2, minmax(100px, 550px));
+        grid-template-columns: repeat(2, minmax(100px, 1fr));
         grid-template-rows: repeat(2, minmax(100px, 345px));
     }
 
@@ -669,34 +761,34 @@ html, body{
         }
         .top-sellers .new-arrivals .card .card-body{
             text-align: left;
-            height: 8%;
+            height: 7%;
         }
             .top-sellers .new-arrivals .card:hover .card-body{
                 height: 22%;
             }
         .top-sellers .new-arrivals .card .card-background{
-            height: 9%;
+            height: 7%;
             width: 100%;
         }
             .top-sellers .new-arrivals .card:hover .card-background{
                 height: 100%;
             }
         /* kort nummer 2 och 3 */
-        .top-sellers .navel .card img{
+        .top-sellers .accessories .card img{
             height: 550px;
         }
-        .top-sellers .new-arrivals .grid > .navel .card .card-body{
+        .top-sellers .new-arrivals .grid > .accessories .card .card-body{
             text-align: left;
-            height: 13%;
+            height: 15%;
         }
-            .top-sellers .new-arrivals .grid > .navel .card:hover .card-body{
+            .top-sellers .new-arrivals .grid > .accessories .card:hover .card-body{
                 height: 45%;
             }
-        .top-sellers  .new-arrivals .grid > .navel .card .card-background{
-            height: 13%;
+        .top-sellers  .new-arrivals .grid > .accessories .card .card-background{
+            height: 15%;
             width: 100%;
         }
-            .top-sellers .new-arrivals .grid > .navel .card:hover .card-background{
+            .top-sellers .new-arrivals .grid > .accessories .card:hover .card-background{
                 height: 100%;
             }
 
@@ -713,6 +805,148 @@ html, body{
         grid-row: 2 / 2;
     }
     
+
+.subscribe{
+    background-color: var(--color-grey-3);
+}
+    .subscribe .container{
+        display: flex;
+        justify-content: space-between;
+        text-align: left;
+        align-items: center;
+    }
+    .subscribe .subscribe-body{
+        flex: 1;
+        /* margin-right: 5rem; */
+        /* padding-right: 8rem; */
+        border: 1px solid red;  
+    }
+
+        .subscribe .subscribe-body h1{
+            font-family: var(--font-play);
+            font-size: 2.5rem;
+            font-weight: var(--font-weight-bold);
+        }
+            .subscribe .subscribe-body h1 strong{
+                color: var(--color-theme);
+                font-weight: var(--font-weight-bold);
+            }
+        .subscribe .subscribe-body p{
+            font-size: 1rem;
+            padding-right: 15rem;
+        }
+
+    .subscribe img{
+        flex: 1;
+        height: 313px;
+        /* margin-left: 2rem; */
+        /* width: 300px; */
+    }
+
+
+.copyright{
+    background-color: var(--color-theme-dark);
+    color: var(--color-white);
+}
+    .copyright .container{
+        padding: 1rem;
+    }
+
+
+/* sida 2 */
+.site-title{
+    background-color: var(--color-theme-dark-light);
+    color: var(--color-white);
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+    .site-title .container{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .site-title h1{
+        color: var(--color-theme);
+        font-size: 1.5rem;
+        font-family: var(--font-roboto);
+        font-weight: var(--font-weight-medium);
+        margin: 0;
+    }
+    .site-title .breadcrumb {
+        list-style: none;
+        margin: 0;
+      }
+        .site-title .breadcrumb li {
+            display: inline;
+            font-size: 18px;
+        }
+            .site-title .breadcrumb li+li:before {
+                padding: 0 0.5rem 0 0.5rem;
+                color: var(--color-white);
+                content: "/\00a0";
+            }
+            .site-title .breadcrumb li a {
+                color: var(--color-theme);
+                text-decoration: none;
+            }
+                .site-title .breadcrumb li a:hover {
+                    color: var(--color-theme-light);
+                    text-decoration: underline;
+                }
+
+.signup-signin{
+    margin: 6rem 0;
+}
+    .signup-signin .container{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 2rem;
+        align-items: start;
+    }
+
+.external-login{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    z-index: 0;
+}
+    .external-login .label{
+        background-color: var(--color-grey-4);
+        padding: 0 1rem;
+        z-index: 2;
+    }
+        .external-login .line {
+            position: absolute;
+            top: 10px;
+            left: 0;
+            right: 0;
+            z-index: -1;
+            border: 1px solid var(--color-grey-1);
+            opacity: 0.5;
+        }
+.external-socialmedia-buttons{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 2rem;
+}
+    .external-socialmedia-buttons .facebook-button{
+        background-image: url(../images/buttons/facebook-login-button.svg);
+        background-repeat: no-repeat;
+        border: none;
+        height: 42px;
+        width: 235px;
+    }
+     /*5:05:00 video  */
+    .external-socialmedia-buttons .google-button{
+        background-image: url(../images/buttons/google-login-button.svg);
+        background-repeat: no-repeat;
+        border: none;
+        height: 42px;
+        width: 235px;
+    }
+
+
 
 
 
